kubernetes-manifests/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
spec:
  containers:
    - name: busybox
      image: busybox
      volumeMounts:
      - mountPath: /array
        name: volv
      args:
        - sleep
        - "1000000"
      imagePullPolicy: Always
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: local-path-pvc
