kubernetes-manifests/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: sonarr
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        readinessProbe:
          tcpSocket:
            port: 8989
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - name: sonarr-config-pv-storage
            mountPath: /config
          - name: tv
            mountPath: /tv
          - name: downloads
            mountPath: /downloads
        ports:
        - containerPort: 8989
          name: sonarr
      volumes:
        - name: sonarr-config-pv-storage
          persistentVolumeClaim:
            claimName: sonarr-config-pv-claim
        - name: tv
          hostPath: # NFS mount
            path: /tv-shows
        - name: downloads
          hostPath: # NFS mount
            path: /deluge
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  rules:
    - host: 'sonarr.coldbrew.labs'
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: sonarr
                port:
                  number: 80
